...
        <ThemedView style={styles.header}>
          <ThemedView style={styles.headerText}>
            <ThemedText type="title" style={styles.title}>
              Adopción
            </ThemedText>
            <ThemedText type="small" themeColor="textSecondary">
              Perros de refugios buscando familia
            </ThemedText>
          </ThemedView>
        </ThemedView>

        {isVerifiedShelter && (
          <Pressable
...
